(#----) Update setup documentation
- Garbage Collection
- Java Melody monitoring